--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,12 @@
 * {
     box-sizing: border-box;
     margin:0;
-    padding: 1vw;
+    padding: .5vw;
 }
 
 body {
     font-family: Helvetica, Arial, sans-serif;
+    
 }
 
 /* HEADER */
@@ -43,14 +44,19 @@ header nav ul {
 }
 
 header nav ul li {
-    padding: 3vw 3vw;
+    padding: 1vw 3vw;
     font-weight: bold;
     font-size: 1.55vw;
 }
 
 header nav ul li:hover {
-    opacity: .75;
+    opacity: .5;
     text-shadow: rgb(113, 113, 113);
+    text-decoration: underline;
+}
+
+header nav ul li.active {
+    text-decoration: underline;
 }
 
 header nav ul li p:hover {
@@ -107,20 +113,46 @@ section div {
     justify-content: space-around;
 }
 
-footer div {
+section div .subnav {
+    font-size: 1.5vw;
     display: flex;
-    flex-wrap: nowrap;
-    background-color: #fff;
-    padding: 1%;
-    padding-bottom: 2%;
-    margin: 0 auto;
-    width: 100%;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-self: center;
+    justify-content: space-around; 
 }
 
-footer img {
-    max-width: 5%;
-    margin: none;
+button {
+    font-size: 1.5vw;
+    margin: 0 auto;
+    display: block;
+}
+
+.subnavul {
+    font-size: 1.5vw;
+    display: flex;
+    /* flex-wrap: nowrap; */
+    /* justify-self: center; */
+    /* justify-content: space-around; */
+    /* align-items: center; */
+    /* flex-direction: row; */
+    list-style: none;
+}
+
+.subnavul li:hover {
+    color: black;
+    opacity: .5;
+    text-decoration: underline;
+}
+
+.navActive {
+    text-decoration: underline;
+}
+
+footer div {
+    position:absolute;
+    left:0;
+    bottom:0;
+    right:0;
 }
 
 footer p {
@@ -136,8 +168,19 @@ footer p {
     flex-wrap: wrap;
     justify-self: center;
     justify-content: center;
-    margin: auto;
+    margin-top: 0vw;
+    margin-left: 15vw;
+    margin-right: 15vw;
 }
+
+.portfolioart p {
+    text-align: center;
+    font-size: 1.5vw;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
 .side {
     font-style: italic;
     margin: auto;
