--- a/src/styles.css
+++ b/src/styles.css
@@ -105,6 +105,14 @@ section h3 {
     
 }
 
+section img {
+    display: block;
+    padding-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
+}
+
 section div {
     font-size: 1.5vw;
     display: flex;
@@ -167,6 +175,14 @@ footer p {
     align-items: center;
     display: flex;
 }
+.portfolioart p {
+    text-align: center;
+    font-size: 1.5vw;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
 
 .elements {
     display: block;
@@ -176,14 +192,6 @@ footer p {
     margin-top: 0vw;
     margin-left: 15vw;
     margin-right: 15vw;
-}
-
-.portfolioart p {
-    text-align: center;
-    font-size: 1.5vw;
-    justify-content: center;
-    align-items: center;
-    display: flex;
 }
 
 .side {
