--- a/src/styles.css
+++ b/src/styles.css
@@ -136,18 +136,13 @@ button {
 }
 
 iframe {
-    height: 100%;
+    height: 300px;
     width: 100%;
 }
 
 .subnavul {
     font-size: 1.5vw;
     display: flex;
-    /* flex-wrap: nowrap; */
-    /* justify-self: center; */
-    /* justify-content: space-around; */
-    /* align-items: center; */
-    /* flex-direction: row; */
     list-style: none;
 }
 
@@ -167,14 +162,23 @@ footer div {
     bottom:0;
     right:0;
 }
-
 footer p {
-    text-align: right;
-    font-size: 2vw;
-    justify-content: center;
-    align-items: center;
     display: flex;
+    justify-content: center;
 }
+footer a {
+    font-size: 1vw;
+    display: inline-flex;
+    justify-content: center;
+    color: black;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: gray;
+    text-decoration: underline;
+}
+
 .portfolioart p {
     text-align: center;
     font-size: 1.5vw;
@@ -195,9 +199,16 @@ footer p {
 }
 
 .side {
-    font-style: italic;
     margin: auto;
+    color: black;
+    text-decoration: none;
 }
+
+.side:hover {
+    color: gray;
+    text-decoration: underline;
+}
+
 .hero {
     background-size: cover;
     background-position: center;
